[gd_scene load_steps=6 format=3 uid="uid://cq6t7jx8fbq3w"]

[ext_resource type="Script" uid="uid://bgh20n3o2ria4" path="res://objects/Player/spider_leg.gd" id="1_81l31"]
[ext_resource type="Script" uid="uid://dftxhty2hpwup" path="res://objects/Node Simulation/sim_node.gd" id="2_06bij"]
[ext_resource type="Texture2D" uid="uid://dl6t6e0hmpusc" path="res://assets/images/Spider/spider_legs.png" id="3_06bij"]

[sub_resource type="AtlasTexture" id="AtlasTexture_8e3mr"]
atlas = ExtResource("3_06bij")
region = Rect2(0, 35, 49, 10)

[sub_resource type="AtlasTexture" id="AtlasTexture_sp50d"]
atlas = ExtResource("3_06bij")
region = Rect2(0, 97, 49, 6)

[node name="SpiderLeg" type="Node2D"]
script = ExtResource("1_81l31")
wanted_position = Vector2(11.35753, 81.8735)
step_weight = 0.2
step_curve_height = 50.0
draw_debug_bones = 2
draw_distance_constraint = 2
simulate_in_debug = true
metadata/_custom_type_script = "uid://ckdrfipawwquh"

[node name="SimNode" type="Node2D" parent="."]
script = ExtResource("2_06bij")
is_anchored = true
is_top_level = false
distance_range = Vector2(0, 0)
metadata/_custom_type_script = "uid://dftxhty2hpwup"

[node name="SimNode2" type="Node2D" parent="SimNode"]
top_level = true
position = Vector2(54.081768, 34.22225)
script = ExtResource("2_06bij")
distance_range = Vector2(64, 64)
allowed_angle_polarity = 1
bone_texture = SubResource("AtlasTexture_8e3mr")
metadata/_custom_type_script = "uid://dftxhty2hpwup"

[node name="SimNode3" type="Node2D" parent="SimNode/SimNode2"]
top_level = true
position = Vector2(11.35753, 81.8735)
script = ExtResource("2_06bij")
is_anchored = true
distance_range = Vector2(64, 64)
bone_texture = SubResource("AtlasTexture_sp50d")
metadata/_custom_type_script = "uid://dftxhty2hpwup"
